# csa-lab4-acc32

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: add64.forth  cat.forth  exectoken.forth  hello.forth  hello_user_name.forth  prob2.forth  sort.forth  superscalar_demo.forth  typetest.forth
golden/: add64.yml  add64_ss.yml  cat.yml  cat_ss.yml  exectoken.yml  exectoken_ss.yml  hello.yml  hello_ss.yml  hello_user_name.yml  hello_user_name_ss.yml  prob2.yml  prob2_ss.yml  sort.yml  sort_ss.yml  superscalar_demo.yml  superscalar_demo_ss.yml  typetest.yml  typetest_ss.yml
src/: config.py  isa.py  machine.py  translator.py
tests/: gen_golden.py  test_golden.py
