[project]
name = "forth-acc-processor"
version = "1.0.0"
description = "Аккумуляторный процессор (Harvard, tick-accurate) и Forth-транслятор"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-PyYAML",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/machine.py" = ["E402"]
"src/translator.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"